# mcp-checker

./: pyproject.toml  server.py  server_manifest.json  smithery.yaml
smithery-mcp-server/: README.md  server.py
vps-callback-server/: Dockerfile  README.md  callback_server.py
